<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.StartFragment">

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/start_subtitle"
            android:textColor="@color/gray"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_title_main"
            android:textColor="@color/main_500"
            android:textSize="28dp"
            android:textStyle="bold"
            android:letterSpacing="0.25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/titleFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/start_title_sub_for"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/titleMerchant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleMain" />

        <TextView
            android:id="@+id/titleMerchant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/start_title_sub_merchant"
            android:textColor="@color/main_800"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/titleFor"
            app:layout_constraintTop_toBottomOf="@+id/titleMain" />

        <Button
            android:id="@+id/signup"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/main_500"
            android:text="@string/start_button_signup"
            android:textSize="16sp"
            android:letterSpacing="0.5"
            app:layout_constraintBottom_toTopOf="@+id/alreadySignedUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/alreadySignedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/start_already_registered"
            android:textSize="16sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="8dp"
            android:text="@string/start_login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/main_500"
            app:layout_constraintTop_toBottomOf="@id/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/alreadySignedUp"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/signupLoginGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="signup,alreadySignedUp,login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>