<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:contentPadding="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/shopListItemImage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_baseline_shopping_basket_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/shop_list_item_image_description" />

            <TextView
                android:id="@+id/shopListItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="4dp"
                android:text="@string/shop_list_item_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:lines="1"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/shopListItemImage"
                app:layout_constraintEnd_toStartOf="@id/shopListItemVerified"/>

            <ImageView
                android:id="@+id/shopListItemVerified"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@+id/shopListItemTitle"
                app:layout_constraintStart_toEndOf="@id/shopListItemTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/shopListItemTitle"
                android:contentDescription="@string/shop_list_item_verified_description" />

            <TextView
                android:id="@+id/shopListItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:lines="2"
                android:text="@string/shop_list_item_description"
                android:ellipsize="end"
                app:layout_constraintStart_toEndOf="@id/shopListItemImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shopListItemTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>